Fix z-index of addTaskContent display bug

--- a/css/addTaskContent.css
+++ b/css/addTaskContent.css
@@ -29,7 +29,6 @@ p {
 .addTaskContent {
     height: 100%;
     position:relative;
-    z-index:-1;
 }
 
 .addTaskContent p {
